# astro_swiper

./: .gitignore  CLAUDE.md  USAGE.md  astro_swiper_web.py  config.yaml  migrate_to_objectid.py  plot_objectid.py  pyproject.toml  readme.md  storage.py
.github/workflows/: publish.yml
astro_swiper/: __init__.py  _cli.py  classifier.py  default_config.yaml  mongo.py  storage.py  web.py
astro_swiper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mobile/: SETUP.md  pubspec.yaml  setup.sh
mobile/lib/: main.dart
mobile/lib/models/: app_state.dart
mobile/lib/screens/: classifier_screen.dart  login_screen.dart
mobile/lib/services/: socket_service.dart  ssh_tunnel_service.dart
tests/: test_classifier.py  test_cli.py  test_storage.py  test_web.py
training_sets/: classifications.db
