[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-swiper"
version = "0.1.0"
description = "Web-based interactive FITS triplet classifier for astronomical image labelling"
readme = "USAGE.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0",
    "flask-socketio>=5.0",
    "astropy>=5.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pyyaml>=6.0",
]

[project.scripts]
asswiper = "astro_swiper._cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["astro_swiper*"]

[tool.setuptools.package-data]
astro_swiper = ["imgs/*.png"]
